# Finance-MCP-Role-Based-Auth

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  ps2_fastmcp.py  stdio_server.py
app/adapters/: macro_data.py  market_data.py  mf_data.py  news_data.py
app/auth/: access_control.py  dependencies.py  jwt_validator.py
app/core/: config.py  contracts.py  errors.py
app/data/: static_reference.py
app/models/: domain.py
app/services/: audit.py  cache.py  mcp_service.py  rate_limit.py  risk_engine.py  store.py  subscriptions.py  upstream_quota.py
docs/: api_reference.md  architecture.md  cursor_local_client_guide.md  demo_runbook.md  schema_reference.md  scope_tier_matrix.md  technical_explanation.md
tests/: test_contracts.py  test_rate_limiter.py  test_risk_engine.py
