[project]
name = "ps2-mcp-server"
version = "0.1.0"
description = "PS2 Portfolio Risk and Alert MCP server (Python + Auth0)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "pyjwt[crypto]>=2.9.0",
]

[project.scripts]
ps2-mcp-stdio = "app.stdio_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
